cabal-version:      2.4
name:               brick-galaxian
version:            0.1.0.3

executable brick-galaxian
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    main-is:          Main.hs
    other-modules:    View, Model, Control
    hs-source-dirs:   src
    build-depends:    base ^>=4.14.1.0
                    , brick
                    , vty
                    , lens
                    , linear
                    , containers


Test-Suite brick-galaxian-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests, src
    main-is:          Test.hs
    other-modules:    Control, Model
    build-depends:    base ^>=4.14.1.0
                    , linear
                    , lens
                    , brick
                    , vty
                    , tasty >= 1.3
                    , tasty-hunit
                    , QuickCheck